--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -53,7 +53,7 @@
                 <input class="form-check-input" type="checkbox" value="" id="form1Example3" checked />
                 <label class="form-check-label" for="form1Example3"> Remember me </label>
               </div>
-              <a class="text-danger"(click)="toggleForgotPassword()">Forgot password?</a>
+              <a class="text-danger"(click)="toggleForgotPassword()" style="cursor:pointer">Forgot password?</a>
             </div>
   
             <!-- Submit button -->
