--- a/src/app/videos/videos.component.html
+++ b/src/app/videos/videos.component.html
@@ -365,7 +365,7 @@
                                               Your browser does not support the video tag.
                                             </video>
                                           </div>
-                                          <p class="text-left fs-7 font-weight-bold " style="margin-left: 13px;color:#A51C05;">ProductName :<span class="text-black">{{video2.text}}{{video2.id}}</span></p>
+                                          <p class="text-left fs-7 font-weight-bold " style="margin-left: 13px;color:#A51C05;">ProductName :<span class="text-black">{{video2.text}}</span></p>
                                           <p class="text-left fs-7 font-weight-bold " style="margin-left: 13px;color:#A51C05;">Veg/Nonveg: <span class="text-black">{{ video2.productType }}</span>
                                             <img *ngIf="video2.productType == 'Veg'" src="../../assets/img/veg.png" class="inline-image small-image" alt="{{ video2.productType }}" />
                                             <img *ngIf="video2.productType != 'Veg'" src="../../assets/img/non-veg.png" class="inline-image small-image" alt="{{ video2.productType }}" />
