--- a/src/app/template-edit/template-edit.component.html
+++ b/src/app/template-edit/template-edit.component.html
@@ -25,8 +25,8 @@
 
 
 <!-- <div *ngIf="internationalCuisine && internationalCuisine.length > 0 && nationalCuisine && nationalCuisine.length>0 "> -->
-    <div *ngIf="nationalCuisine && nationalCuisine.length > 0 ">
-<!-- <div> -->
+    <!-- <div *ngIf="nationalCuisine && nationalCuisine.length > 0 "> -->
+<div>
 
 
 
@@ -93,7 +93,7 @@
                                         </div>
                                         <div class="col-lg-2">
 
-                                            <select class="form-select" [(ngModel)]="NationSelect"
+                                            <select class="form-select" [(ngModel)]="NationSelect" 
                                                 aria-label="Default select example">
                                                 <option value="" disabled>Select</option>
                                                 <option *ngFor="let cuisine of nationalCuisine" value="{{cuisine}}">
