all videos page

--- a/src/app/all-videos/all-videos.component.html
+++ b/src/app/all-videos/all-videos.component.html
@@ -58,7 +58,7 @@
 
 
 								<div style="width: 270px; height: 150px; position: relative;background: linear-gradient(180deg, #A51C05 17%, black 94%) ">
-									<div
+									<!-- <div
 										style="left: 0px; top: 0px; position: absolute; color: white; font-size: 15px; font-family: Montserrat; font-weight: 700; word-wrap: break-word; ; padding-left: 15px;margin-top: 5px;">
 										{{ video.text }} </div>
 									<div
@@ -84,7 +84,62 @@
 											: </span>
 										<span
 											style="color: white; font-size: 13px; font-family: Montserrat; font-weight: 700; word-wrap: break-word">{{video.internationalCuisine}}</span>
+									</div> -->
+
+
+									<div class="row px-2">
+
+										<div class="col-sm-8" style="color: white; font-size: 15px; font-family: dmSans; font-weight: 700; ; padding-left: 15px;margin-top: 5px;">
+											{{ video.text }} 
+										</div>
+										<div class="col-sm-4" style="color: white; font-size: 15px; font-family: dmSans; font-weight: 700; ; padding-left: 15px;margin-top: 5px;">
+											{{video.productType}}
+										</div>
+
 									</div>
+
+									<div class="row px-2">
+
+										<div class="col-sm-8" style="color: white; font-size: 15px; font-family: dmSans; font-weight: 700; ; padding-left: 15px;margin-top: 5px;">
+											International Cuisine
+										</div>
+										<div class="col-sm-4" style="color: white; font-size: 15px; font-family: dmSans; font-weight: 700; ; padding-left: 15px;margin-top: 5px;">
+											{{video.internationalCuisine}}
+										</div>
+
+
+
+									</div>
+
+
+									<div class="row px-2">
+
+										<div class="col-sm-8" style="color: white; font-size: 15px; font-family: dmSans; font-weight: 700; ; padding-left: 15px;margin-top: 5px;">
+											National Cuisine
+										</div>
+										<div class="col-sm-4" style="color: white; font-size: 15px; font-family: dmSans; font-weight: 700; ; padding-left: 15px;margin-top: 5px;">
+											{{video.nationalCuisine}}
+										</div>
+
+										
+
+									</div>
+
+
+									<div class="row px-2">
+
+										<div class="col-sm-8" style="color: white; font-size: 15px; font-family: dmSans; font-weight: 700; ; padding-left: 15px;margin-top: 5px;">
+											Product Category
+										</div>
+										<div class="col-sm-4" style="color: white; font-size: 15px; font-family: dmSans; font-weight: 700; ; padding-left: 15px;margin-top: 5px;">
+											{{video.productServeCategory}}
+										</div>
+
+										
+
+									</div>
+
+
 								</div>
 							</div>
 						</div>
