--- a/src/app/templates/templates.component.html
+++ b/src/app/templates/templates.component.html
@@ -130,7 +130,7 @@ align-items: center;
     
                                 <input class="form-check-input mx-2" type="radio" name="foodPreference" id="Veg" value="Veg" [(ngModel)]="foodPreference">
                                 <label class="form-check-label" for="Veg">Veg</label>
-                                <input class="form-check-input mx-2" type="radio" name="foodPreference" id="nonVeg" value="Non Veg" [(ngModel)]="foodPreference" checked>
+                                <input class="form-check-input mx-2" type="radio" name="foodPreference" id="nonVeg" value="Non-Veg" [(ngModel)]="foodPreference" checked>
                                 <label class="form-check-label" for="nonVeg">Non Veg</label>
                                 <!-- <input class="form-check-input mx-2" type="radio" name="foodPreference" id="both" value="Both" [(ngModel)]="foodPreference" checked>
                                 <label class="form-check-label" for="nonVeg">Both</label> -->
