--- a/src/app/all-videos/all-videos.component.html
+++ b/src/app/all-videos/all-videos.component.html
@@ -20,10 +20,13 @@
 				<!-- <div class="container "><h2>All Videos</h2><div class="row hik"><div class="col-3"><div class="card"><div class="card-body"></div></div></div></div></div> -->
 				<div class="container" style="margin-top: 50px;">
 					<h2 style="color:#A51C05; margin-top: 100px;" >All Videos</h2>
+					<!-- <input type="text" placeholder="Search..." [(ngModel)]="searchQuery" (input)="onSearch()"> -->
+					<!-- <input type="text" placeholder="Search..." [(ngModel)]="searchQuery" (ngModelChange)="onSearch()"> -->
+
 
 
 					<div class="row">
-						<div class="col-lg-3" *ngFor="let video of video_fulldetail" style="margin-bottom: 50px;">
+						<div class="col-lg-3" *ngFor="let video of video_fulldetail | paginate: { itemsPerPage: itemsPerPage, currentPage: p }" style="margin-bottom: 50px;">
 							<!-- <h2>{{ video.text }}</h2> -->
 							<!-- <p>{{ video.description }}</p> -->
 							<!-- Add any other HTML elements to display additional information if needed -->
@@ -37,7 +40,7 @@
 
 								<div class="row ">
 									<div class="col-md-12">
-										<div class="ratio ratio-16x9">
+										<div class="ratio ratio-16x9" (click)="navigateToVideoDetail(video.id)">
 
 											
 
@@ -144,7 +147,23 @@
 							</div>
 						</div>
 					</div>
+					<div class="row ">
+
+						<div class="col-lg-9"></div>
+						<div class="col-lg-3 ">
+							<div class="mt-3 py-5 ">
+	
+								<pagination-controls (pageChange)="p = $event"></pagination-controls>
+							</div>
+			
+						</div>
+					</div>
+					
 				</div>
+
+
+				
+				
 			</section>
 		</div>
 	</main>
