--- a/src/app/dashboard/manageteam/manageteam.component.html
+++ b/src/app/dashboard/manageteam/manageteam.component.html
@@ -23,12 +23,25 @@
   <section class="section dashboard borrowers">
     <div id="sideBarContent" class="container-fluid pe-5 ps-6">
         <div class="container">
-          <div class="finnup__profileheader">
-            <div class="finnup__profiletitle">
-              <h2 style="color:#A51C05;">Manage Team</h2>
+          <div class="row">
+
+            <div class="col-lg-10">
+              <div class="finnup__profileheader">
+                <div class="finnup__profiletitle">
+                  <h2 style="color:#A51C05;">Manage Team</h2>
+                </div>
+             
+    
+                <div  *ngIf="role == 'Superadmin'">
+                <div class=" d-grid gap-2 d-md-flex justify-content-md-end">
+                  <button type="button" class="btn btn-sm" data-bs-toggle="modal" data-bs-target="#mahisiva" style="background:#A51C05;color: white;">Add Admin</button>
+                </div>
+              </div>
+              </div>
+
             </div>
-         
           </div>
+         
           <div class="row mt-25">
             <div class="col-lg-10">
               <div class="finnup__profiletable">
@@ -41,6 +54,8 @@
                       <th scope="col">Role</th>
                       <!-- <th scope="col">Status</th> -->
                       <th scope="col">Video Status</th>
+                      <th scope="col">Actions</th>
+
                       <!-- <th scope="col">UnAssign Video</th> -->
 
   
@@ -68,7 +83,12 @@
                       <td scope="col" *ngIf="admins.taskAssigned == 1">
 
                         <button type="button" class="btn btn-danger btn-sm" (click)="unassignvideo(admins.id)">UnAssign Video</button>
-                      </td>                 
+                      </td>     
+                      
+                      
+                      <td>
+                        <button type="button" class="btn btn-danger px-3 btn-sm" >Edit</button>
+                      </td>
                     </tr>
                   </tbody>
                 </table>
@@ -76,6 +96,121 @@
             </div>
           </div>
         </div>
+
+        <div
+  class="modal fade"
+  id="mahisiva"
+  tabindex="-4"
+  role="dialog"
+  aria-labelledby="exampleModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-dialog-centered modal-md" role="document">
+    <div class="modal-content finnup__profile-modal">
+      <form #form2="ngForm">
+        <div class="modal-header border-0">
+          <div
+            class="finnup__modal-title"
+            style="margin: auto; text-align: center"
+          >
+            <h3 class="modal-title display-2" id="exampleModalLabel">
+              Add Team Members
+            </h3>
+
+            <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true" style="font-size: 40px;">&times;</span>
+            </button>
+           
+          </div>
+     
+         
+        </div>
+        <div>
+          <div class="modal-body border-0">
+            <div class="row mt-25">
+              <div class="col-lg-10 mt-20" style="margin: auto">
+                <label>Name <span class="text-danger">*</span></label>
+                <div class="input-group">
+                  <input
+                    type="text"
+                    autocomplete="off"
+                    class="form-control"
+                    placeholder="Enter name"
+                    required
+                    [(ngModel)]="model.userName"
+                    name="userName"
+                   
+                   
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="row mt-20">
+              <div class="col-lg-10 mb-4" style="margin: auto">
+                <label>Email<span class="text-danger">*</span> </label>
+
+                <div class="input-group">
+                  <input
+                    type="email"
+                    class="form-control"
+                    placeholder="Enter email id "
+                    required
+                    [(ngModel)]="model.email"
+                    autocomplete="off"
+                   
+                    name="email" 
+                  
+                   
+                    />
+                </div>
+              </div>
+        
+
+              <div class="col-lg-10 mb-4" style="margin: auto">
+                <label>Password <span class="text-danger">*</span></label>
+                <div class="input-group">
+                  <input
+                    type="text"
+                    autocomplete="off"
+                    required
+                    [(ngModel)]="model.password"
+                    pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[@$!%*#?&])[A-Za-z\d@$!%*#?&]{8,}$"
+                    class="form-control"
+                    placeholder="Enter Password"
+                    name="password" 
+                   
+                  
+                  />
+                </div>
+              </div>
+
+            
+
+            </div>
+
+            <div class="col-12 text-center pt-30">
+        
+              <button style="margin-left: 15px;"
+              type="submit"
+              class="btn hi s-bor mb-30"
+              [disabled] = "form2.invalid" (click)="AddAdmin(form2)"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+              id="reloaded">
+              Save/Send mail
+            </button>
+            </div>
+
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+
+
+
     </div>
   </section>
   </div>
@@ -83,6 +218,123 @@
   
   <!-- modal for add admin  -->
   <!-- Connector -->
+
+
+  <div
+  class="modal fade"
+  id="mahisiva"
+  tabindex="-4"
+  role="dialog"
+  aria-labelledby="exampleModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-dialog-centered modal-md" role="document">
+    <div class="modal-content finnup__profile-modal">
+      <form #form2="ngForm">
+        <div class="modal-header border-0">
+          <div
+            class="finnup__modal-title"
+            style="margin: auto; text-align: center"
+          >
+            <h3 class="modal-title display-2" id="exampleModalLabel">
+              Add Team Members
+            </h3>
+
+            <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true" style="font-size: 40px;">&times;</span>
+            </button>
+           
+          </div>
+     
+         
+        </div>
+        <div>
+          <div class="modal-body border-0">
+            <div class="row mt-25">
+              <div class="col-lg-10 mt-20" style="margin: auto">
+                <label>Name <span class="text-danger">*</span></label>
+                <div class="input-group">
+                  <input
+                    type="text"
+                    autocomplete="off"
+                    class="form-control"
+                    placeholder="Enter name"
+                    required
+                    [(ngModel)]="model.userName"
+                    name="userName"
+                   
+                   
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="row mt-20">
+              <div class="col-lg-10 mb-4" style="margin: auto">
+                <label>Email<span class="text-danger">*</span> </label>
+
+                <div class="input-group">
+                  <input
+                    type="email"
+                    class="form-control"
+                    placeholder="Enter email id "
+                    required
+                    [(ngModel)]="model.email"
+                    autocomplete="off"
+                   
+                    name="email" 
+                  
+                   
+                    />
+                </div>
+              </div>
+        
+
+              <div class="col-lg-10 mb-4" style="margin: auto">
+                <label>Password <span class="text-danger">*</span></label>
+                <div class="input-group">
+                  <input
+                    type="text"
+                    autocomplete="off"
+                    required
+                    [(ngModel)]="model.password"
+                    pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[@$!%*#?&])[A-Za-z\d@$!%*#?&]{8,}$"
+                    class="form-control"
+                    placeholder="Enter Password"
+                    name="password" 
+                   
+                  
+                  />
+                </div>
+              </div>
+
+            
+
+            </div>
+
+            <div class="col-12 text-center pt-30">
+        
+              <button style="margin-left: 15px;"
+              type="submit"
+              class="btn hi s-bor mb-30"
+              [disabled] = "form2.invalid" (click)="AddAdmin(form2)"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+              id="reloaded">
+              Save/Send mail
+            </button>
+            </div>
+
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+
+
+
+
   <div
     class="modal fade"
     id="exampleModal-41"
