--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <style>
-  /* .hik{
+  .hik{
      margin-top: 60px;
-  } */
+  }
 
   .hi{
     background: #A51C05;
@@ -76,7 +76,7 @@ th,td{
 
 
 
-  <div class="col-12 ">
+  <div class="col-12 mt-5">
 
 
 
@@ -87,9 +87,9 @@ th,td{
       
       <!-- Card stats -->
 
-      <div class="">
+      <div class="pt-5">
 
-        <div class="row">  
+        <div class="row mt-5">  
         
           <!-- <div  *ngIf="role == 'Superadmin'">
             <div class=" d-grid gap-2 d-md-flex justify-content-md-end">
