--- a/src/app/dashboard/manageteam/manageteam.component.html
+++ b/src/app/dashboard/manageteam/manageteam.component.html
@@ -125,8 +125,7 @@
   aria-hidden="true"
 >
   <div class="modal-dialog modal-dialog-centered modal-md" role="document">
-    <div class="modal-content finnup__profile-modal"  style="
-  border-radius: 30px;">
+    <div class="modal-content finnup__profile-modal" >
       <form #form2="ngForm">
         <div class="modal-header border-0">
           <div
