--- a/src/app/new-videos/new-videos.component.html
+++ b/src/app/new-videos/new-videos.component.html
@@ -1,5 +1,5 @@
 <style>
-    .hiks {
+    .hik {
         margin-top: 60px;
     }
 
@@ -69,7 +69,7 @@
 </div>
  
  
-<div class="pageContent " >
+<div class="pageContent " style="margin-top: 50px;" >
   <main id="main" class="main">
     <div id="sideBarContent" class="container-fluid pe-5 ps-6">
 
@@ -82,7 +82,7 @@
 
 <div class="row hik">
 
-    <div class=" ">
+    <div class="mt-5 ">
 
 
 
@@ -109,7 +109,7 @@
                         <div class="row mt-5">
                             <div class="col-xl-12 col-lg-6">
                                 <div class="card card-stats mb-4 mb-xl-0"
-                                    style=" margin-bottom: 30px;" id="example1">
+                                    style="margin-top: 50px;  margin-bottom: 30px;" id="example1">
 
 
 
