--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -17,10 +17,9 @@ body {
 
 
 
-.modal-backdrop {
+/* .modal-backdrop {
   background-color: #ffffff3d!important;
-  /* border-radius: 25px; */
-}
+} */
 
 a,
 img {
