--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -30,7 +30,7 @@
               <label class="form-label" for="validationDefault03">Email address</label>
               <span class = "text-danger">*</span>
 
-              <input type="email" id="validationDefault03" name="email" class="form-control form-control" [(ngModel)]="model.email" #email="ngModel"  [ngClass]="{'is-invalid':form.submitted && email.invalid ,'is-valid':form.submitted && email.valid }"   placeholder="Enter Email" required autocomplete="off" >
+              <input type="email" id="validationDefault03" name="email" class="form-control form-control-lg" [(ngModel)]="model.email" #email="ngModel"  [ngClass]="{'is-invalid':form.submitted && email.invalid ,'is-valid':form.submitted && email.valid }"   placeholder="Enter Email" required autocomplete="off" >
 
               <span *ngIf="!email.valid && (email.touched || email.dirty) ">
                 <span class="text-danger" *ngIf="email.errors?.['required']">
@@ -44,7 +44,7 @@
             <!-- Password input -->
             <div class="form-outline mb-4">
               <label class="form-label" for="form1Example23">Password</label><span class = "text-danger">*</span>
-              <input type="password" id="form1Example23" name="password" class="form-control form-control"   [(ngModel)]="model.password"  placeholder="Enter Password" autocomplete="off" required/>
+              <input type="password" id="form1Example23" name="password" class="form-control form-control-lg"   [(ngModel)]="model.password"  placeholder="Enter Password" autocomplete="off" required/>
             </div>
   
             <div class="d-flex justify-content-around align-items-center mb-4">
