--- a/src/app/template-list/template-list.component.html
+++ b/src/app/template-list/template-list.component.html
@@ -1,5 +1,7 @@
 <style>
-  
+    .hik {
+        margin-top: 60px;
+    }
 
     .card {
         transition: transform 0.3s, opacity 0.3s, box-shadow 0.3s;
@@ -80,20 +82,20 @@
 
                     <!-- Card stats -->
 
-                    <div class="">
+                    <div class="pt-5">
 
-                        <div class="row ">
-                            <section class="main-p-area pb-50" id="reload" >
+                        <div class="row mt-5">
+                            <section class="main-p-area pb-50" id="reload"  style="margin-top: 50px;">
                                 <div id="sideBarContent" class="container-fluid pe-5 ps-6">
                                     <div class=" ">
                                         <div class="finnup__profileheader">
                                             <div class="finnup__profiletitle">
-                                                <h2 class=" mx-auto d-block" style="color:#A51C05;padding-left: 90px;">Manage Template</h2>
+                                                <h2 class="her" style="color:#A51C05;">Manage Template</h2>
                                             </div>
 
                                         </div>
                                         <div class="row mt-25">
-                                            <div class="col-lg-10 mx-auto d-block">
+                                            <div class="col-lg-10 ">
                                                 <div class="finnup__profiletable">
                                                     <table class="table table-striped">
                                                         <thead class="thead-dark text-white">
