--- a/src/app/videodetails/videodetails.component.html
+++ b/src/app/videodetails/videodetails.component.html
@@ -19,7 +19,7 @@
 <div class="sidebarContainer">
   <app-leftnav></app-leftnav>
 </div>
-<div class="pageContent col-12" >
+<div class="pageContent col-12" style="margin-top: 100px;" >
   <main id="main" class="main">
       <div id="sideBarContent" class="container-fluid pe-5 ps-6">
 
