--- a/src/app/videos/videos.component.html
+++ b/src/app/videos/videos.component.html
@@ -69,7 +69,7 @@
 </div>
  
  
-<div class="pageContent " >
+<div class="pageContent " style="margin-top: 50px;" >
   <main id="main" class="main">
     <div id="sideBarContent" class="container-fluid pe-5 ps-6">
 
@@ -80,13 +80,13 @@
        
           <div class="container " >
 
-<div class="row ">
+<div class="row hik">
 
-    <div class=" ">
+    <div class="  mt-5">
 
 
 
-        <div class="header bg-gradient-danger pb-8 pt-5 pt-md-8" >
+        <div class="header bg-gradient-danger pb-8 pt-5 pt-md-8"  style="margin-top: 30px;" >
 
             <div class="container-fluid">
                 <div class="header-body">
@@ -106,7 +106,7 @@
 
 
                           
-                        <div class="row ">
+                        <div class="row mt-5">
                             <div class="col-xl-12 col-lg-6">
                                 <div class="card card-stats mb-4 mb-xl-0"
                                     style="margin-top: 50px; margin-bottom: 30px;" id="example1">
